--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" type="text/css" href="css/fontello.css">
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
-<title>Портфолио мопса "Валли"</title>
+<title>Ассенизаторы Семфирополь</title>
 </head>
 <body>
 <header>
@@ -73,31 +73,7 @@
 <script type="text/javascript" src="js/bootstrap.bundle.min.js"></script>
 
 
-<!--<header>
-  <div class="wrap">
- <div class="header">
- <div class="logo">
-  <a href=""><span class="name">Ассенизаторы Симферополь</span><img src="img/logo.jpg" alt="" class="img_logo" /></a>
- </div>
-          <div class="nav">
-  <ul>
-   <li><a href="#">Главная</a></li>
-   <li class="active"><a href="#">Портфолио</a></li>
-   <li><a href="#">Обо мне</a></li>
-   <li><a href="#">Контакт</a></li>
-  </ul>
- </div>
- <div class="clear"></div>
- 
- </div>
- <div class="slider">
-   
 
-
-
- </div>
- </div>
-</header>-->
 </body>
 </html>
 
