--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all" />
 <link rel="stylesheet" type="text/css" href="css/fontello.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 <title>Ассенизаторы Семфирополь</title>
@@ -14,7 +15,7 @@
 <div class="container">
   <div class="row">
     <div class="col-12">
-      <h1 class="text-center text-white">Создание сайтов на Bootstrap 1.0</h1>
+      <h1 class="text-center text-white">Откачка выгребных и сливных ям. Выкачка септиков, туалетов, воды и жидких негорючих отходов.</h1>
       <div class="itd_play" data-bs-toggle="modal" data-bs-target="#exampleModal">
         <div class="itd_triangle"></div>
     </div>
@@ -69,12 +70,69 @@
           <div class="line"></div>
         </div>
       </div>
-    
+   
+
 
   </div>
 </section>
 
+<section class="forwhom">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+      <h2 class="text-center text-uppercase color2 mb-5 card-checklist">Преимущества</h2><div><i class="bi bi-alarm-fill"></i></div>
+      </div>
+    </div>
+    <div class="row mb-5">
+      <div class="col-md-6 col-sm-12">
+        <h5 class="text-center">Хочет научиться создавать сайты своими силами</h5>
+      </div>
+      <div class="col-md-6 col-sm-12">
+        <h5 class="text-center">Хочет научиться создавать сайты своими силами</h5>
+      </div>
+      <div class="col-md-6 col-sm-12">
+        <h5 class="text-center">Хочет научиться создавать сайты своими силами</h5>
+      </div>
+      <div class="col-md-6 col-sm-12">
+        <h5 class="text-center">Хочет научиться создавать сайты своими силами</h5>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <a href="#footer" class="btn btn-lg text-uppercase btn-itd">Заказать</a>
+      </div>
+    </div>
+  </div>
 
+</section>
+
+<section class="forma_sv">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+      <h2 class="text-center text-uppercase color2 mb-5 card-checklist">Оставь заявку, мы перезвоним</h2><div><i class="bi bi-alarm-fill"></i></div>
+      <h5 class="text-center color1 mb-5">Если вы хотите заказать услугу ассенизатора в Симферополе - оставьте свой номер телефона, мы очень быстро с Вами свяжемся и проконсультируем по всем вопросам.</h5>
+      </div>
+    </div>
+    <div class="row mb-5">
+      <div class="col-12 col-lg-6 mx-auto text-center">
+        <form>
+          <div class="mb-3">
+            <label for="exampleInputName" class="form-label"><h5 class="text-center">Ваше имя:</h5></label>
+            <input type="text" class="form-control" name="FirstName">
+            <label for="exampleInputName" class="form-label mt-5"><h5 class="text-center">Ваш номер телефона:</h5></label>
+            <input type="tel" class="form-control" name="phone">
+            <label for="exampleInputName" class="form-label mt-5"><h5 class="text-center">Чем мы можем Вам помочь?</h5></label>
+            <textarea class="form-control" rows="5" id="comment" name="text"></textarea>
+            <input type="button" name="buttons" class="btn btn-lg text-uppercase btn-itd_form mt-5 text-center" value="Позвоните мне!" >
+          </div>
+        </form>
+      </div>
+
+    </div>
+  </div>
+
+</section>
 
 <footer id="footer">
   
@@ -140,5 +198,3 @@
 
 
 
-
-</html>
